added comments for future steps

--- a/scipy2024/notebook.ipynb
+++ b/scipy2024/notebook.ipynb
@@ -340,6 +340,17 @@
     "carbon_absorbed = n_trees * carbon_absorbed_per_tree\n",
     "print(f'Amount of carbon absorbed: {carbon_absorbed:.0f} kg')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# given certain limitations of system (80m altitude, size of a tree IRL, etc.), we can give min/max size of tree\n",
+    "# do morphological operations to get rid of small objects and close gaps in the mask\n",
+    "# this way we dont falsely count small objects as trees (ie bushes, etc.) and flasely count large objects as multiple trees (ie a forest as multiple trees or a field as a single tree)"
+   ]
   }
  ],
  "metadata": {
