--- a/scipy2024/6_image_processing.ipynb
+++ b/scipy2024/6_image_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "{'divide': 'ignore', 'over': 'warn', 'under': 'ignore', 'invalid': 'ignore'}"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,23 +83,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_kernel_size(gsd):\n",
     "    diameter_of_tree = 10  # meters\n",
+    "\n",
     "    # Number of pixels the tree will cover\n",
-    "    area_of_tree = diameter_of_tree / gsd\n",
+    "    diameter_of_tree_px = diameter_of_tree / gsd\n",
+    "    area_of_tree = np.pi * (diameter_of_tree_px / 2)**2\n",
     "    # Kernel size for morphological operations\n",
-    "    kernel_size = int(np.sqrt(area_of_tree))\n",
+    "    kernel_size = int(np.sqrt(diameter_of_tree_px))\n",
     "    print(f\"Kernel size: {kernel_size}\")\n",
-    "    return kernel_size"
+    "    return area_of_tree, kernel_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,27 +222,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_image(image_path):\n",
     "    print(f\"Processing image: {image_path}\")\n",
+    "    # Get the bands of the image\n",
     "    blue, green, red, rgb = get_bands(image_path)\n",
+    "    # Get the metadata of the image\n",
     "    metadata = get_metadata(image_path)\n",
+    "    # Get the GSD of the image\n",
     "    gsd = get_gsd(metadata)\n",
-    "    kernel_size = get_kernel_size(gsd)\n",
+    "    # Get the kernel size for morphological operations\n",
+    "    area_of_tree, kernel_size = get_kernel_size(gsd)\n",
+    "    # Calculate the VARI index\n",
     "    vari = get_vari(blue, green, red)\n",
+    "    # Generate the vegetation and non-vegetation masks\n",
     "    vegetation_mask, non_vegetation_mask = threshold(vari)\n",
+    "    # Apply smoothing and morphological operations to the vegetation mask\n",
     "    smoothed_mask = smoothing(vegetation_mask, int(kernel_size / 2))\n",
+    "    # Apply morphological operations to the smoothed mask\n",
     "    filtered_mask = morphological_operations(smoothed_mask, kernel_size)\n",
+    "    # Apply the mask to the RGB image\n",
     "    mask_overlay, inverse_mask_overlay = segmentation(filtered_mask, rgb)\n",
-    "    return mask_overlay, inverse_mask_overlay\n"
+    "\n",
+    "    return gsd, area_of_tree, mask_overlay, inverse_mask_overlay\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test the pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +298,181 @@
    ],
    "source": [
     "image_path = 'data/batch_001/8928dec4ddbffff/DJI_0876.JPG'\n",
-    "mask_overlay, inverse_mask_overlay = process_image(image_path)\n",
+    "gsd, area_of_tree, mask_overlay, inverse_mask_overlay = process_image(\n",
+    "    image_path)\n",
     "visualize_segmentation(rgb, mask_overlay, inverse_mask_overlay)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Batch processing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of vegetation pixels per image: 5660353\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Do stuff\n",
+    "num_vegetation_pixels = np.nansum(vegetation_mask)\n",
+    "num_images = 1\n",
+    "avg_vegetation_pixel_per_image = num_vegetation_pixels / num_images\n",
+    "print(\n",
+    "    f\"Average number of vegetation pixels per image: {int(avg_vegetation_pixel_per_image)}\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Estimate carbon absorbed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95264.89585623457\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(area_of_tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of trees: 15\n",
+      "Amount of carbon absorbed: 371 kg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the number of trees in the image: number of vegetation pixels / area of tree\n",
+    "n_trees = avg_vegetation_pixel_per_image / (\n",
+    "    area_of_tree * 4)  # adding 4 to account for overestimation, overlap, etc.\n",
+    "print(f'Number of trees: {n_trees:.0f}')\n",
+    "\n",
+    "# CO2 absorbed per tree in kg (https://ecotree.green/en/how-much-co2-does-a-tree-absorb#:~:text=A%20tree%20absorbs%20approximately%2025kg%20of%20CO2%20per%20year&text=But%20really%20a%20tree%20absorbs,a%20tree%20absorbs%20so%20interesting.)\n",
+    "carbon_absorbed_per_tree = 25\n",
+    "# Calculate the amount of carbon absorbed by the trees\n",
+    "carbon_absorbed = n_trees * carbon_absorbed_per_tree\n",
+    "print(f'Amount of carbon absorbed: {carbon_absorbed:.0f} kg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extrapolate for a city\n",
+    "First let's find the footprint of the camera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Footprint area: 9893.23 m^2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count total pixels\n",
+    "total_pixels = red.size\n",
+    "# Since the camera is pointed down we can assume the footprint is a rectangle\n",
+    "# Calculate the footprint of the camera\n",
+    "footprint_area = total_pixels * gsd**2\n",
+    "\n",
+    "print(f'Footprint area: {footprint_area:.2f} m^2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of scenes to cover city: 11642\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extrapolate the carbon absorbed by the city (Vancouver, BC, Canada)\n",
+    "area = 115.18 * 1000 * 1000  # 115.18km^2\n",
+    "\n",
+    "num_scenes = area / footprint_area\n",
+    "\n",
+    "print(f'Number of scenes to cover city: {num_scenes:.0f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount of carbon absorbed by the city: 4323440 kg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the carbon absorbed by the city\n",
+    "carbon_absorbed_city = carbon_absorbed * num_scenes\n",
+    "\n",
+    "print(f'Amount of carbon absorbed by the city: {carbon_absorbed_city:.0f} kg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The City of Vancouver emits 28,048 tonnes CO2e ([reference](https://metrovancouver.org/services/air-quality-climate-action/Documents/annual-corporate-energy-and-greenhouse-gas-emissions-management-report-2018-2022.pdf)). That means that these trees are likely absorbing ~15% of Vancouver's greenhouse gases!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drawbacks\n",
+    "Here let's talk about and show where this method fails:\n",
+    "- Segmentation method heavily dependant on: colour of the tree, sensor calibration (i.e., time of day, weather, etc.), size of tree, shape of tree?, \n",
+    "- Counting trees heavily dependant of tree size estimate\n",
+    "- Carbon capture only an estimate"
    ]
   }
  ],
