--- a/scipy2024/2_exif.ipynb
+++ b/scipy2024/2_exif.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_path = 'data/batch_001/8928dec4ddbffff/DJI_0876.JPG'"
+    "image_path = 'data/presentation/8928de8dd83ffff/20213/DJI_0681.JPG'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,31 +62,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'SourceFile': 'data/batch_001/8928dec4ddbffff/DJI_0876.JPG', 'ExifTool:ExifToolVersion': 12.6, 'ExifTool:Warning': '[minor] Possibly incorrect maker notes offsets (fix by 1783?)', 'File:FileName': 'DJI_0876.JPG', 'File:Directory': 'data/batch_001/8928dec4ddbffff', 'File:FileSize': 5257518, 'File:FileModifyDate': '2024:06:14 03:25:40-07:00', 'File:FileAccessDate': '2024:07:02 10:35:17-07:00', 'File:FileInodeChangeDate': '2024:06:13 20:28:40-07:00', 'File:FilePermissions': 100664, 'File:FileType': 'JPEG', 'File:FileTypeExtension': 'JPG', 'File:MIMEType': 'image/jpeg', 'File:ExifByteOrder': 'II', 'File:ImageWidth': 4000, 'File:ImageHeight': 3000, 'File:EncodingProcess': 0, 'File:BitsPerSample': 8, 'File:ColorComponents': 3, 'File:YCbCrSubSampling': '2 1', 'EXIF:ImageDescription': 'DCIM\\\\108MEDIA\\\\DJI_0876.JPG', 'EXIF:Make': 'DJI', 'EXIF:Model': 'FC3682', 'EXIF:Orientation': 1, 'EXIF:XResolution': 72, 'EXIF:YResolution': 72, 'EXIF:ResolutionUnit': 2, 'EXIF:Software': 'v01.64.0152', 'EXIF:ModifyDate': '2024:04:20 11:48:07', 'EXIF:YCbCrPositioning': 1, 'EXIF:ExposureTime': 0.000625, 'EXIF:FNumber': 1.7, 'EXIF:ExposureProgram': 2, 'EXIF:ISO': 100, 'EXIF:ExifVersion': '0230', 'EXIF:DateTimeOriginal': '2024:04:20 11:48:07', 'EXIF:CreateDate': '2024:04:20 11:48:07', 'EXIF:ComponentsConfiguration': '1 2 3 0', 'EXIF:CompressedBitsPerPixel': 3.313564667, 'EXIF:ShutterSpeedValue': '0.000625024342839001', 'EXIF:ApertureValue': 1.6993699982773, 'EXIF:ExposureCompensation': 0, 'EXIF:MaxApertureValue': 1.6993699982773, 'EXIF:SubjectDistance': 0, 'EXIF:MeteringMode': 2, 'EXIF:LightSource': 1, 'EXIF:Flash': 32, 'EXIF:FocalLength': 6.72, 'EXIF:FlashpixVersion': '0100', 'EXIF:ColorSpace': 1, 'EXIF:ExifImageWidth': 4000, 'EXIF:ExifImageHeight': 3000, 'EXIF:InteropIndex': 'R98', 'EXIF:InteropVersion': '0100', 'EXIF:ExposureIndex': 'undef', 'EXIF:FileSource': 3, 'EXIF:SceneType': 1, 'EXIF:CustomRendered': 0, 'EXIF:ExposureMode': 0, 'EXIF:WhiteBalance': 0, 'EXIF:DigitalZoomRatio': 1, 'EXIF:FocalLengthIn35mmFormat': 24, 'EXIF:SceneCaptureType': 0, 'EXIF:GainControl': 0, 'EXIF:Contrast': 0, 'EXIF:Saturation': 0, 'EXIF:Sharpness': 0, 'EXIF:SubjectDistanceRange': 0, 'EXIF:SerialNumber': '53HQL6R0M5066C', 'EXIF:GPSVersionID': '2 3 0 0', 'EXIF:GPSLatitudeRef': 'N', 'EXIF:GPSLatitude': 49.2885553888889, 'EXIF:GPSLongitudeRef': 'W', 'EXIF:GPSLongitude': 122.835592166667, 'EXIF:GPSAltitudeRef': 0, 'EXIF:GPSAltitude': 125.09, 'EXIF:XPComment': 'Type=N, Mode=P, DE=None', 'EXIF:XPKeywords': 'v01.64.0152;UnKnown;v1.0.0', 'EXIF:Compression': 6, 'EXIF:ThumbnailOffset': 18432, 'EXIF:ThumbnailLength': 10450, 'EXIF:ThumbnailImage': '(Binary data 10450 bytes, use -b option to extract)', 'MakerNotes:Make': 'DJI', 'MakerNotes:SpeedX': 0, 'MakerNotes:SpeedY': -0.5, 'MakerNotes:SpeedZ': -0.100000001490116, 'MakerNotes:Pitch': -0.300000011920929, 'MakerNotes:Yaw': -179.899993896484, 'MakerNotes:Roll': -8.19999980926514, 'XMP:About': 'DJI Meta Data', 'XMP:ModifyDate': '2024:04:20', 'XMP:CreateDate': '2024:04:20', 'XMP:Make': 'DJI', 'XMP:Model': 'FC3682', 'XMP:Format': 'image/jpg', 'XMP:AbsoluteAltitude': '+125.09', 'XMP:RelativeAltitude': '+108.70', 'XMP:GimbalRollDegree': '+0.00', 'XMP:GimbalYawDegree': '+0.00', 'XMP:GimbalPitchDegree': '+0.00', 'XMP:FlightRollDegree': -8.2, 'XMP:FlightYawDegree': -179.9, 'XMP:FlightPitchDegree': -0.3, 'XMP:CamReverse': 0, 'XMP:GimbalReverse': 0, 'XMP:SensorTemperature': 31, 'XMP:Version': 7.0, 'XMP:HasSettings': False, 'XMP:HasCrop': False, 'XMP:AlreadyApplied': False, 'MPF:MPFVersion': '0010', 'MPF:NumberOfImages': 2, 'MPF:MPImageFlags': 8, 'MPF:MPImageFormat': 0, 'MPF:MPImageType': 65537, 'MPF:MPImageLength': 249953, 'MPF:MPImageStart': 5007565, 'MPF:DependentImage1EntryNumber': 0, 'MPF:DependentImage2EntryNumber': 0, 'MPF:ImageUIDList': '(Binary data 66 bytes, use -b option to extract)', 'MPF:TotalFrames': 1, 'MPF:PreviewImage': '(Binary data 249953 bytes, use -b option to extract)', 'Composite:Aperture': 1.7, 'Composite:ImageSize': '4000 3000', 'Composite:Megapixels': 12, 'Composite:ScaleFactor35efl': 3.57142857142857, 'Composite:ShutterSpeed': 0.000625, 'Composite:GPSAltitude': 125.09, 'Composite:GPSLatitude': 49.2885553888889, 'Composite:GPSLongitude': -122.835592166667, 'Composite:CircleOfConfusion': '0.00841295297608264', 'Composite:FOV': 73.7398575770812, 'Composite:FocalLength35efl': 24, 'Composite:GPSPosition': '49.2885553888889 -122.835592166667', 'Composite:HyperfocalDistance': 3.15748403460723, 'Composite:LightValue': 12.1749256825007}]\n"
+      "[\n",
+      "    {\n",
+      "        \"SourceFile\": \"data/presentation/8928de8dd83ffff/20213/DJI_0681.JPG\",\n",
+      "        \"ExifTool:ExifToolVersion\": 12.6,\n",
+      "        \"ExifTool:Warning\": \"[minor] Possibly incorrect maker notes offsets (fix by 1783?)\",\n",
+      "        \"File:FileName\": \"DJI_0681.JPG\",\n",
+      "        \"File:Directory\": \"data/presentation/8928de8dd83ffff/20213\",\n",
+      "        \"File:FileSize\": 5224815,\n",
+      "        \"File:FileModifyDate\": \"2024:04:22 11:45:25-07:00\",\n",
+      "        \"File:FileAccessDate\": \"2024:07:06 23:20:30-07:00\",\n",
+      "        \"File:FileInodeChangeDate\": \"2024:07:06 23:20:29-07:00\",\n",
+      "        \"File:FilePermissions\": 100644,\n",
+      "        \"File:FileType\": \"JPEG\",\n",
+      "        \"File:FileTypeExtension\": \"JPG\",\n",
+      "        \"File:MIMEType\": \"image/jpeg\",\n",
+      "        \"File:ExifByteOrder\": \"II\",\n",
+      "        \"File:ImageWidth\": 4000,\n",
+      "        \"File:ImageHeight\": 3000,\n",
+      "        \"File:EncodingProcess\": 0,\n",
+      "        \"File:BitsPerSample\": 8,\n",
+      "        \"File:ColorComponents\": 3,\n",
+      "        \"File:YCbCrSubSampling\": \"2 1\",\n",
+      "        \"EXIF:ImageDescription\": \"DCIM\\\\100MEDIA\\\\DJI_0681.JPG\",\n",
+      "        \"EXIF:Make\": \"DJI\",\n",
+      "        \"EXIF:Model\": \"FC3682\",\n",
+      "        \"EXIF:Orientation\": 1,\n",
+      "        \"EXIF:XResolution\": 72,\n",
+      "        \"EXIF:YResolution\": 72,\n",
+      "        \"EXIF:ResolutionUnit\": 2,\n",
+      "        \"EXIF:Software\": \"v01.64.0152\",\n",
+      "        \"EXIF:ModifyDate\": \"2024:04:22 09:46:59\",\n",
+      "        \"EXIF:YCbCrPositioning\": 1,\n",
+      "        \"EXIF:ExposureTime\": 0.001,\n",
+      "        \"EXIF:FNumber\": 1.7,\n",
+      "        \"EXIF:ExposureProgram\": 2,\n",
+      "        \"EXIF:ISO\": 100,\n",
+      "        \"EXIF:ExifVersion\": \"0230\",\n",
+      "        \"EXIF:DateTimeOriginal\": \"2024:04:22 09:46:59\",\n",
+      "        \"EXIF:CreateDate\": \"2024:04:22 09:46:59\",\n",
+      "        \"EXIF:ComponentsConfiguration\": \"1 2 3 0\",\n",
+      "        \"EXIF:CompressedBitsPerPixel\": 3.289884667,\n",
+      "        \"EXIF:ShutterSpeedValue\": \"0.00100005842338247\",\n",
+      "        \"EXIF:ApertureValue\": 1.6993699982773,\n",
+      "        \"EXIF:ExposureCompensation\": 0,\n",
+      "        \"EXIF:MaxApertureValue\": 1.6993699982773,\n",
+      "        \"EXIF:SubjectDistance\": 0,\n",
+      "        \"EXIF:MeteringMode\": 2,\n",
+      "        \"EXIF:LightSource\": 1,\n",
+      "        \"EXIF:Flash\": 32,\n",
+      "        \"EXIF:FocalLength\": 6.72,\n",
+      "        \"EXIF:FlashpixVersion\": \"0100\",\n",
+      "        \"EXIF:ColorSpace\": 1,\n",
+      "        \"EXIF:ExifImageWidth\": 4000,\n",
+      "        \"EXIF:ExifImageHeight\": 3000,\n",
+      "        \"EXIF:InteropIndex\": \"R98\",\n",
+      "        \"EXIF:InteropVersion\": \"0100\",\n",
+      "        \"EXIF:ExposureIndex\": \"undef\",\n",
+      "        \"EXIF:FileSource\": 3,\n",
+      "        \"EXIF:SceneType\": 1,\n",
+      "        \"EXIF:CustomRendered\": 0,\n",
+      "        \"EXIF:ExposureMode\": 0,\n",
+      "        \"EXIF:WhiteBalance\": 0,\n",
+      "        \"EXIF:DigitalZoomRatio\": 1,\n",
+      "        \"EXIF:FocalLengthIn35mmFormat\": 24,\n",
+      "        \"EXIF:SceneCaptureType\": 0,\n",
+      "        \"EXIF:GainControl\": 0,\n",
+      "        \"EXIF:Contrast\": 0,\n",
+      "        \"EXIF:Saturation\": 0,\n",
+      "        \"EXIF:Sharpness\": 0,\n",
+      "        \"EXIF:SubjectDistanceRange\": 0,\n",
+      "        \"EXIF:SerialNumber\": \"53HQL6S0M506T9\",\n",
+      "        \"EXIF:GPSVersionID\": \"2 3 0 0\",\n",
+      "        \"EXIF:GPSLatitudeRef\": \"N\",\n",
+      "        \"EXIF:GPSLatitude\": 49.2670478611111,\n",
+      "        \"EXIF:GPSLongitudeRef\": \"W\",\n",
+      "        \"EXIF:GPSLongitude\": 123.156746361111,\n",
+      "        \"EXIF:GPSAltitudeRef\": 0,\n",
+      "        \"EXIF:GPSAltitude\": 29.063,\n",
+      "        \"EXIF:XPComment\": \"Type=N, Mode=P, DE=None\",\n",
+      "        \"EXIF:XPKeywords\": \"v01.64.0152;UnKnown;v1.0.0\",\n",
+      "        \"EXIF:Compression\": 6,\n",
+      "        \"EXIF:ThumbnailOffset\": 18432,\n",
+      "        \"EXIF:ThumbnailLength\": 11983,\n",
+      "        \"EXIF:ThumbnailImage\": \"(Binary data 11983 bytes, use -b option to extract)\",\n",
+      "        \"MakerNotes:Make\": \"DJI\",\n",
+      "        \"MakerNotes:SpeedX\": 0,\n",
+      "        \"MakerNotes:SpeedY\": 0.100000001490116,\n",
+      "        \"MakerNotes:SpeedZ\": 0,\n",
+      "        \"MakerNotes:Pitch\": 5.59999990463257,\n",
+      "        \"MakerNotes:Yaw\": -179.699996948242,\n",
+      "        \"MakerNotes:Roll\": 6.30000019073486,\n",
+      "        \"XMP:About\": \"DJI Meta Data\",\n",
+      "        \"XMP:ModifyDate\": \"2024:04:22\",\n",
+      "        \"XMP:CreateDate\": \"2024:04:22\",\n",
+      "        \"XMP:Make\": \"DJI\",\n",
+      "        \"XMP:Model\": \"FC3682\",\n",
+      "        \"XMP:Format\": \"image/jpg\",\n",
+      "        \"XMP:AbsoluteAltitude\": \"+29.06\",\n",
+      "        \"XMP:RelativeAltitude\": \"+87.20\",\n",
+      "        \"XMP:GimbalRollDegree\": \"+0.00\",\n",
+      "        \"XMP:GimbalYawDegree\": \"+0.00\",\n",
+      "        \"XMP:GimbalPitchDegree\": \"+0.00\",\n",
+      "        \"XMP:FlightRollDegree\": \"+6.30\",\n",
+      "        \"XMP:FlightYawDegree\": -179.7,\n",
+      "        \"XMP:FlightPitchDegree\": \"+5.60\",\n",
+      "        \"XMP:CamReverse\": 0,\n",
+      "        \"XMP:GimbalReverse\": 0,\n",
+      "        \"XMP:SensorTemperature\": 22,\n",
+      "        \"XMP:Version\": 7.0,\n",
+      "        \"XMP:HasSettings\": false,\n",
+      "        \"XMP:HasCrop\": false,\n",
+      "        \"XMP:AlreadyApplied\": false,\n",
+      "        \"MPF:MPFVersion\": \"0010\",\n",
+      "        \"MPF:NumberOfImages\": 2,\n",
+      "        \"MPF:MPImageFlags\": 8,\n",
+      "        \"MPF:MPImageFormat\": 0,\n",
+      "        \"MPF:MPImageType\": 65537,\n",
+      "        \"MPF:MPImageLength\": 251237,\n",
+      "        \"MPF:MPImageStart\": 4973578,\n",
+      "        \"MPF:DependentImage1EntryNumber\": 0,\n",
+      "        \"MPF:DependentImage2EntryNumber\": 0,\n",
+      "        \"MPF:ImageUIDList\": \"(Binary data 66 bytes, use -b option to extract)\",\n",
+      "        \"MPF:TotalFrames\": 1,\n",
+      "        \"MPF:PreviewImage\": \"(Binary data 251237 bytes, use -b option to extract)\",\n",
+      "        \"Composite:Aperture\": 1.7,\n",
+      "        \"Composite:ImageSize\": \"4000 3000\",\n",
+      "        \"Composite:Megapixels\": 12,\n",
+      "        \"Composite:ScaleFactor35efl\": 3.57142857142857,\n",
+      "        \"Composite:ShutterSpeed\": 0.001,\n",
+      "        \"Composite:GPSAltitude\": 29.063,\n",
+      "        \"Composite:GPSLatitude\": 49.2670478611111,\n",
+      "        \"Composite:GPSLongitude\": -123.156746361111,\n",
+      "        \"Composite:CircleOfConfusion\": \"0.00841295297608264\",\n",
+      "        \"Composite:FOV\": 73.7398575770812,\n",
+      "        \"Composite:FocalLength35efl\": 24,\n",
+      "        \"Composite:GPSPosition\": \"49.2670478611111 -123.156746361111\",\n",
+      "        \"Composite:HyperfocalDistance\": 3.15748403460723,\n",
+      "        \"Composite:LightValue\": 11.496853777388\n",
+      "    }\n",
+      "]\n"
      ]
     }
    ],
    "source": [
-    "print(metadata)"
+    "# Print the metadata json\n",
+    "print(json.dumps(metadata, indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Altitude:  125.09 meters\n",
+      "Altitude:  87.2 meters\n",
       "Focal Length:  6.72 mm\n",
       "Pixel Pitch:  1.5425e-06 meters / px\n"
      ]
@@ -94,7 +234,7 @@
    ],
    "source": [
     "# Extract the GPS Altitude\n",
-    "altitude = metadata[0].get(\"EXIF:GPSAltitude\")\n",
+    "altitude = float(metadata[0].get(\"XMP:RelativeAltitude\"))\n",
     "focal_length = metadata[0].get(\"EXIF:FocalLength\")  # in mm\n",
     "# Size of pixel = sensor width (m) / image width (px)\n",
     "image_width = metadata[0].get(\"File:ImageWidth\")\n",
