google colab links

--- a/scipy2024/1_rasters.ipynb
+++ b/scipy2024/1_rasters.ipynb
@@ -9,15 +9,14 @@
     "## Preparing Your Workspace\n",
     "\n",
     "### Option 1: (recommended) Run in Google Colab\n",
-    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](TBD)\n",
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kevinlacaille/presentations/blob/main/scipy2024/1_rasters.ipynb)\n",
     "\n",
     "### Option 2: Run local Jupyter instance\n",
     "You can also choose to open this Notebook in your own local Jupyter instance.\n",
     "\n",
     "**Prerequisites**\n",
     "\n",
-    "- Install: rasterio library\n",
-    "- Download example data: TBD"
+    "- Install: rasterio"
    ]
   },
   {
@@ -50,8 +49,7 @@
     }
    ],
    "source": [
-    "!pip install rasterio\n",
-    "!wget TBD"
+    "!pip install rasterio"
    ]
   },
   {
