--- a/scipy2024/2_exif.ipynb
+++ b/scipy2024/2_exif.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Working with Raster Bands\n",
+    "\n",
+    "## Preparing Your Workspace\n",
+    "\n",
+    "### Option 1: (recommended) Run in Google Colab\n",
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kevinlacaille/presentations/blob/main/scipy2024/2_exif.ipynb)\n",
+    "\n",
+    "### Option 2: Run local Jupyter instance\n",
+    "You can also choose to open this Notebook in your own local Jupyter instance.\n",
+    "\n",
+    "**Prerequisites**\n",
+    "\n",
+    "- Install: rasterio, exiftool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install rasterio\n",
+    "!pip install exiftool"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
