--- a/scipy2024/6_image_processing.ipynb
+++ b/scipy2024/6_image_processing.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "**Prerequisites**\n",
     "\n",
-    "- Install: rasterio, opencv"
+    "- Install: rasterio, exiftool"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "!pip install rasterio\n",
-    "!pip install opencv-python"
+    "!pip install exiftool"
    ]
   },
   {
