--- a/scipy2024/4_masks_and_filters.ipynb
+++ b/scipy2024/4_masks_and_filters.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "**Prerequisites**\n",
     "\n",
-    "- Install: rasterio, opencv"
+    "- Install: rasterio"
    ]
   },
   {
@@ -25,8 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install rasterio\n",
-    "!pip install opencv-python"
+    "!pip install rasterio"
    ]
   },
   {
