--- a/scipy2024/6_image_processing.ipynb
+++ b/scipy2024/6_image_processing.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "!pip install rasterio\n",
-    "!pip install exiftool"
+    "!pip install PyExifTool"
    ]
   },
   {
